--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                     <h2 class="qualification-block__title">Чем могу быть полезен</h2>
                     <div class="qualification-block__text">
                         <p>Буду рад стать стажером в вашей компании. Также готов к тестовым заданиям и курсам.</p>
-                        <p>Знаю основы C№ и стандартные библиотеки. Умею создавать, диплоить ботов и сайты, работал с виртуальными машинами и нейросетями.
-                            В своих проектах использую различные базы данных, api, SQL запросы. Имею базовое представление о создании HTML-шаблонов. 
+                        <p>Знаю основы C# и стандартные библиотеки. Умею создавать, диплоить ботов и сайты, работал с виртуальными машинами и нейросетями.
+                            В своих проектах использую различные базы данных, API, SQL запросы. Имею базовое представление о создании HTML-шаблонов. 
                             При необходимости могу быстро войти в другой язык программирования.
                             Владею знаниями о сборке и отлаживании компьютеров, могу заниматся системной администрацией, ремонтом.</p>
                     </div>
